[gd_scene load_steps=6 format=3 uid="uid://upvdf7vyxt7x"]

[ext_resource type="PackedScene" uid="uid://bjvcii02gslih" path="res://Project/Environment/slot.tscn" id="1_841k2"]
[ext_resource type="Script" path="res://Project/%Scripts/Types/team.gd" id="1_xxqub"]
[ext_resource type="Script" path="res://Project/%Scripts/Types/Data/soul_data.gd" id="2_h1p8b"]
[ext_resource type="Resource" uid="uid://bbv1pts3hjeu" path="res://Project/Characters/Souls/peasant.tres" id="3_55uj5"]

[sub_resource type="Resource" id="Resource_xjx04"]
script = ExtResource("2_h1p8b")
type = ExtResource("3_55uj5")
level = 1
xp = 0

[node name="Team" type="Node2D"]
script = ExtResource("1_xxqub")

[node name="Slot1" parent="." instance=ExtResource("1_841k2")]
id = 1
soul = SubResource("Resource_xjx04")

[node name="Slot2" parent="." instance=ExtResource("1_841k2")]
position = Vector2(200, -75)
id = 2

[node name="Slot3" parent="." instance=ExtResource("1_841k2")]
position = Vector2(200, 75)
id = 3

[node name="Slot4" parent="." instance=ExtResource("1_841k2")]
position = Vector2(-200, -75)
id = 4

[node name="Slot5" parent="." instance=ExtResource("1_841k2")]
position = Vector2(-200, 75)
id = 5
